Accounts page table horizontal scroll bar fix

--- a/web/src/css/accounts_style.css
+++ b/web/src/css/accounts_style.css
@@ -45,9 +45,9 @@ input{
 }
 
 #table-box div{
-
-	width:inherit;
+	width: calc(100% + 20px);
 }
+
 #table-box{
 	display: flex;
 	flex-flow: column nowrap;
